moved the nav options div back to the right to fix some spacing issues

--- a/src/App.css
+++ b/src/App.css
@@ -63,7 +63,7 @@
   width: 70vw;
   height: 100vh;
   z-index: 10;
-  transform: skewX(35deg);
+  transform: skew(35deg);
   overflow-x: hidden;
 }
 
@@ -81,7 +81,7 @@
 .navOptions{
   display: inline-flex;
   flex-direction: row;
-  margin-left: 18vw;
+  margin-left: 7vw;
   margin-top: 3vh;
 
 }
